@@ -52,10 +52,11 @@ use constant DNSSEC => USESEC && defined eval join '', qw(r e q u i r e), ' Net:
 my @index;
 if (DNSSEC) {
 	my $key = new Net::DNS::RR( type => 'DNSKEY', key => 'AwEAAQ==' );
-	my @arg = ( '', $key, '' );				# Grotesquely inefficient; but API not changing anytime soon
 	foreach my $class ( map "Net::DNS::SEC::$_", qw(RSA DSA ECCGOST ECDSA EdDSA) ) {
-		push @index, map eval { $key->algorithm($_); $class->verify(@arg); ( $_ => $class ) }, ( 1 .. 25 )
-				if eval join '', qw(r e q u i r e), " $class";
+		my @algorithms = eval join '', qw(r e q u i r e), " $class; $class->_index";	# 1.14 API
+		@algorithms = grep eval { $key->algorithm($_); $class->verify( '', $key, '' ); 1 }, ( 1 .. 16 )
+				unless scalar(@algorithms);	# Grotesquely inefficient; but need to support older API
+		push @index, map( ( $_ => $class ), @algorithms );
 	}
 }
 
